[package]
name = "LCD-Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
rppal = "0.22.1"
serde_json = "1.0.140"
stdext = "0.3.3"
systemd-journal-logger = "2.2.2"
crossbeam-channel = "0.5"
do_while = "0.1.0"
signal-hook = "0.3.18"
chrono = "0.4.41"
local-ip-address = "0.6.5"
systemstat = "0.2.4"
json = "0.12.4"
serialport = "4.7.2"
tiny_http = "0.12.0"
terminate-thread = "0.3.1"
ascii = "1.1.0"
rand = "0.9.1"
